Feature(): Ajuste no título, adicionado acentuação

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <section class="box-img-one box-img">
             <div class="title">
                 <span class="border">Petrolândia-PE</span>
+                <span class="border">Petrolândia-PE</span>
             </div>
         </section>
 
