feature(#5r84jk): Layout responsivo finalizado

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </section>
 
         <!-- section one -->
-        <section class="section-one">
+        <section class="section-one section-container">
             <h2>História</h2>
             <p>Petrolândia é um município brasileiro do estado de Pernambuco, Região Nordeste do país, conhecida como "Atlântida Brasileira". Localiza-se no Vale do São Francisco a uma distância de aproximadamente 410 km da capital pernambucana, Recife. A história do município passou por uma enorme transformação nos anos 80 devido à construção da Usina Hidrelétrica Luiz Gonzaga (também conhecida como Usina Hidrelétrica de Itaparica), que resultou na inundação da antiga cidade pelo lago de Itaparica e transferência dos moradores para a atual cidade em 06 de março de 1988.</p>
         </section>
@@ -25,7 +25,7 @@
         <section class="box-img-two box-img"></section>
     
         <!-- section two -->
-        <section class="section-two">
+        <section class="section-two section-container">
             <h2>Ilha de Rarrá</h2>
             <p>Um dos pontos turísticos conhecidos na cidade de Petrolândia é: Ilha de Rarrá. Uma verdadeira joia do São Francisco, localizada no meio do rio entre Petrolândia e Glória, na Bahia. Um pequeno paraíso rodeado por águas cristalinas e dunas de areia clara. De tão bonita parece até miragem, mas ao se aproximar de catamarã percebe-se que a ilha é uma deslumbrante verdade. Um opção para curtir a energia única do Velho Chico.</p>
         </section>
@@ -33,7 +33,7 @@
         <section class="box-img-three box-img"></section>
     
         <!-- section three -->
-        <section class="section-three">
+        <section class="section-three section-container">
             <h2>Praia do sobrado</h2>
             <p>Outro ponto turístico: A Praia do Sobrado, mais um lugar paradisíaco que fica situado nas margens do Rio São Francisco. A Praia do Sobrado é composta por uma série de dunas de areias finas que, juntamente com as águas cristalinas e algumas formações rochosas isoladas (que são uma espécie de marca registrada deste lugar), formam cenários de imensa beleza.</p>
         </section>
